--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -86,9 +86,9 @@ header img{
   position: relative;
   color: white;
 }
-.left h1{
+.left h1, h2{
   text-align: center;
-  padding-top:85px;
+  padding-top:20px;
   margin-bottom: 0;
   color: #000000;
 }
