Feature (Specific Health) Add health of a flower
What does this pr do?

Have a user able to add specific health of a randomly selected flower

Any related pivotal stories?

[Finishes #167011956]

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -228,6 +228,14 @@ textarea{
   color:grey;
   letter-spacing: 1px;
 }
+
+.health{
+  display: flex;
+}
+
+.block{
+  display: block;
+}
 /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ FOOTER SECTION @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
 
 
