--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -88,7 +88,7 @@ header img{
 }
 .left h1, h2{
   text-align: center;
-  padding-top:20px;
+  padding-top:40px;
   margin-bottom: 0;
   color: #000000;
 }
@@ -227,6 +227,20 @@ textarea{
 ::-webkit-input-placeholder{
   color:grey;
   letter-spacing: 1px;
+}
+
+#myDIV {
+  height: 250px;
+  width: 250px;
+  overflow: auto;
+  background: green;
+}
+
+#content {
+  margin:500px;
+  height: 800px;
+  width: 2000px;
+  background-color: coral;
 }
 
 /* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ FOOTER SECTION @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */
